; ModuleID = '/home/carl/AnghaBench/freebsd/sys/security/mac_test/extr_mac_test.c_test_ifnet_copy_label.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/security/mac_test/extr_mac_test.c_test_ifnet_copy_label.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.label = type { i32 }

@MAGIC_IFNET = common dso_local global i32 0, align 4
@ifnet_copy_label = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.label*, %struct.label*)* @test_ifnet_copy_label to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_ifnet_copy_label(%struct.label* %0, %struct.label* %1) #0 {
  %3 = alloca %struct.label*, align 8
  %4 = alloca %struct.label*, align 8
  store %struct.label* %0, %struct.label** %3, align 8
  store %struct.label* %1, %struct.label** %4, align 8
  %5 = load %struct.label*, %struct.label** %3, align 8
  %6 = load i32, i32* @MAGIC_IFNET, align 4
  %7 = call i32 @LABEL_CHECK(%struct.label* %5, i32 %6)
  %8 = load %struct.label*, %struct.label** %4, align 8
  %9 = load i32, i32* @MAGIC_IFNET, align 4
  %10 = call i32 @LABEL_CHECK(%struct.label* %8, i32 %9)
  %11 = load i32, i32* @ifnet_copy_label, align 4
  %12 = call i32 @COUNTER_INC(i32 %11)
  ret void
}

declare dso_local i32 @LABEL_CHECK(%struct.label*, i32) #1

declare dso_local i32 @COUNTER_INC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
